tests/idris2/basic034/expected
1/1: Building lets (lets.idr)
Error: While processing right hand side of dolet2. When unifying Maybe Int and Maybe String.
Mismatch between: Int and String.

lets.idr:22:39--22:40
    |
 22 |     = do let Just x' : Maybe String = x
    |                                       ^

